data/derived/comb/progs/unify/prog3565.ml.out
Characters 83-93:
  else let leading = digitsOfInt (n/10) :: (n mod 10) in
                                           ^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a list list
